--- a/Midterm/index.html
+++ b/Midterm/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
-<title>busy bees</title>
+<title>Motivational Music</title>
 <meta charset="UTF-8">
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/amplitudejs@{{v5.3.1}}/dist/amplitude.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" type ="text/css" href="css/lab.css">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-black.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -23,7 +25,7 @@
 <div class="w3-top">
  <div class="w3-bar w3-theme-red w3-left-align">
   <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-hover-white w3-theme-d2" href="javascript:void(0);" onclick="openNav()"><i class="fa fa-bars"></i></a>
-  <a href="#" class="w3-bar-item w3-button w3-teal"><i class="fa fa-home w3-margin-right"></i>Logo</a>
+  <a href="#" class="w3-bar-item w3-button w3-teal"><i class="fa fa-home w3-margin-right"></i><img src="img/logo2.png"></a>
   <a href="#team" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Team</a>
   <a href="#work" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Work</a>
   <a href="#pricing" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Playlist</a>
@@ -177,16 +179,15 @@
         <li class="w3-theme">
           <p class="w3-xlarge">Basic</p>
         </li>
-        <li class="w3-padding-16"><b>10GB</b> Storage</li>
-        <li class="w3-padding-16"><b>10</b> Emails</li>
-        <li class="w3-padding-16"><b>10</b> Domains</li>
-        <li class="w3-padding-16"><b>Endless</b> Support</li>
+        <p> hello nvwoenv;obwvngao'vwuenv'ohawivnb'owaiehnoiwe voaiehosbvoawhgoiwbvo;invpiwehob</p>
         <li class="w3-padding-16">
-          <h2 class="w3-wide"><i class="fa fa-usd"></i> 10</h2>
-          <span class="w3-opacity">per month</span>
+          <li class="w3-padding-16"><b>25GB</b> Storage</li>
+          <li class="w3-padding-16"><b>25</b> Emails</li>
+          <li class="w3-padding-16"><b>25</b> Domains</li>
+          <li class="w3-padding-16"><b>Endless</b> Support</li>
         </li>
         <li class="w3-theme-l5 w3-padding-24">
-          <button class="w3-button w3-teal w3-padding-large"><i class="fa fa-check"></i> Sign Up</button>
+          <button class="w3-button w3-teal w3-padding-large"><i class="fa fa-check"></i> Actual Playlisssst</button>
         </li>
       </ul>
     </div>
