--- a/Midterm/index.html
+++ b/Midterm/index.html
@@ -25,10 +25,10 @@
 <div class="w3-top">
  <div class="w3-bar w3-theme-red w3-left-align">
   <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-hover-white w3-theme-d2" href="javascript:void(0);" onclick="openNav()"><i class="fa fa-bars"></i></a>
-  <a href="#" class="w3-bar-item w3-button w3-teal"><i class="fa fa-home w3-margin-right"></i><img src="img/logo2.png"></a>
+  <a href="#" class="w3-bar-item w3-button w3-teal"><i class="fa fa-home w3-margin-right"></i><img id="logo" src="img/logo2.png"></a>
   <a href="#team" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Team</a>
-  <a href="#work" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Work</a>
-  <a href="#pricing" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Playlist</a>
+  <a href="#playlist" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Playlist</a>
+  <a href="#about" class="w3-bar-item w3-button w3-hide-small w3-hover-white">About</a>
   <a href="#contact" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Contact</a>
     <div class="w3-dropdown-hover w3-hide-small">
     <button class="w3-button" title="Notifications">Genres <i class="fa fa-caret-down"></i></button>
@@ -78,8 +78,14 @@
   </div>
 </div>
 
+<!-- Container -->
+<div class="w3-container" style="position:relative">
+  <a onclick="w3_open()" class="w3-button w3-xlarge w3-circle w3-teal"
+  style="position:absolute;top:-28px;right:24px">+</a>
+</div>
+
 <!-- Team Container -->
-<div class="w3-container w3-padding-64 w3-center" id="team">
+<div class="w3-container w3-padding-32 w3-center" id="team">
 <h2>OUR TEAM</h2>
 <p>Meet the team - Our Music Junkies! </p>
 
@@ -112,17 +118,107 @@
 </div>
 </div>
 
+<!-- Pricing Row -->
+<div class="w3-row-padding w3-center" id="playlist">
+    <h2>P  L  A  Y  L  I  S  T</h2><br>
+    <div class="w3-quarter w3-margin-bottom">
+      <ul class="w3-ul w3-border w3-hover-shadow">
+        <li class="w3-theme">
+          <p class="w3-xlarge">Rock/Alternative</p>
+        </li>
+        <li class="w3-padding-16">  <iframe width="300" height="215"
+    src="https://www.youtube.com/embed/tgbNymZ7vqY">
+    </iframe></li>
+        <li class="w3-padding-16"><audio src="mp3/.mp3" controls></audio><b>Domains</b></li>
+        <li class="w3-padding-16"><img src="img/" width="" height=""><audio src="mp3/.mp3" controls></audio><b>Domains</b></li>
+        <li class="w3-padding-16"><img src="img/" width="" height=""><audio src="mp3/.mp3" controls></audio><b>Endless</b></li>
+        <li class="w3-padding-16">
+        </li>
+        <li class="w3-theme-l5 w3-padding-24">
+          <button class="w3-button w3-teal w3-padding-large"><i class="fa fa-check"></i> Link to Playlist</button>
+        </li>
+      </ul>
+    </div>
+
+    <div class="w3-quarter w3-margin-bottom">
+      <ul class="w3-ul w3-border w3-hover-shadow">
+        <li class="w3-theme">
+          <p class="w3-xlarge">Country</p>
+        </li>
+        <li class="w3-padding-16">  <iframe width="300" height="215"
+    src="https://www.youtube.com/embed/tgbNymZ7vqY">
+    </iframe></li>
+        <li class="w3-padding-16"><audio src="mp3/.mp3" controls></audio><b>Domains</b></li>
+        <li class="w3-padding-16"><img src="img/" width="" height=""><audio src="mp3/.mp3" controls></audio><b>Domains</b></li>
+        <li class="w3-padding-16"><img src="img/" width="" height=""><audio src="mp3/.mp3" controls></audio><b>Endless</b></li>
+        <li class="w3-padding-16">
+        </li>
+        <li class="w3-theme-l5 w3-padding-24">
+          <button class="w3-button w3-teal w3-padding-large"><i class="fa fa-check"></i> Link to Playlist</button>
+        </li>
+      </ul>
+    </div>
+
+    <div class="w3-quarter w3-margin-bottom">
+      <ul class="w3-ul w3-border w3-hover-shadow">
+        <li class="w3-theme">
+          <p class="w3-xlarge">Rap/Hip-Hop</p>
+        </li>
+        <li class="w3-padding-16">  <iframe width="300" height="215"
+    src="https://www.youtube.com/embed/tgbNymZ7vqY">
+    </iframe></li>
+        <li class="w3-padding-16"><audio src="mp3/.mp3" controls></audio><b>Domains</b></li>
+        <li class="w3-padding-16"><img src="img/" width="" height=""><audio src="mp3/.mp3" controls></audio><b>Domains</b></li>
+        <li class="w3-padding-16"><img src="img/" width="" height=""><audio src="mp3/.mp3" controls></audio><b>Endless</b></li>
+        <li class="w3-padding-16">
+        </li>
+        <li class="w3-theme-l5 w3-padding-24">
+          <button class="w3-button w3-teal w3-padding-large"><i class="fa fa-check"></i> Link to Playlist</button>
+        </li>
+      </ul>
+    </div>
+
+    <div class="w3-quarter w3-margin-bottom">
+      <ul class="w3-ul w3-border w3-hover-shadow">
+        <li class="w3-theme">
+          <p class="w3-xlarge">Jazz</p>
+        </li>
+        <li class="w3-padding-16">
+          <iframe width="300" height="215"
+            src="https://www.youtube.com/embed/tgbNymZ7vqY">
+          </iframe></li>
+        <li class="w3-padding-16"><audio src="mp3/.mp3" controls></audio><b>Domains</b></li>
+        <li class="w3-padding-16"><img src="img/pic.jpg" width="120" height="120"><audio src="mp3/.mp3" controls></audio><b>Domains</b></li>
+        <li class="w3-padding-16"><img src="img/" width="" height=""><audio src="mp3/.mp3" controls></audio><b>Endless</b></li>
+        <li class="w3-padding-16">
+        </li>
+        <li class="w3-theme-l5 w3-padding-24">
+          <button class="w3-button w3-teal w3-padding-large"><i class="fa fa-check"></i> Link to Playlist</button>
+        </li>
+      </ul>
+    </div>
+</div>
+
+</div>
+
 <!-- Work Row -->
-<div class="w3-row-padding w3-padding-64 w3-theme-l1" id="work">
+<div class="w3-row-padding w3-padding-64 w3-theme-l1" id="about">
 
 <div class="w3-quarter">
-<h2>About Us</h2>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  <div class="w3-card w3-white">
+    <div class="w3-container">
+    <h3>Rock/Alternative</h3>
+    <h4>tell me why you like music</h4>
+    <p>Blablabla</p>
+    <p>Blablabla</p>
+    <p>Blablabla</p>
+    <p>Blablabla</p>
+    </div>
+    </div>
 </div>
 
 <div class="w3-quarter">
 <div class="w3-card w3-white">
-  <img src="/w3images/snow.jpg" alt="Snow" style="width:100%">
   <div class="w3-container">
   <h3>Customer 1</h3>
   <h4>Trade</h4>
@@ -136,7 +232,6 @@
 
 <div class="w3-quarter">
 <div class="w3-card w3-white">
-  <img src="/w3images/lights.jpg" alt="Lights" style="width:100%">
   <div class="w3-container">
   <h3>Customer 2</h3>
   <h4>Trade</h4>
@@ -150,7 +245,6 @@
 
 <div class="w3-quarter">
 <div class="w3-card w3-white">
-  <img src="/w3images/mountains.jpg" alt="Mountains" style="width:100%">
   <div class="w3-container">
   <h3>Customer 3</h3>
   <h4>Trade</h4>
@@ -164,103 +258,14 @@
 
 </div>
 
-<!-- Container -->
-<div class="w3-container" style="position:relative">
-  <a onclick="w3_open()" class="w3-button w3-xlarge w3-circle w3-teal"
-  style="position:absolute;top:-28px;right:24px">+</a>
-</div>
-
-<!-- Pricing Row -->
-<div class="w3-row-padding w3-center w3-padding-64" id="pricing">
-    <h2>Playlist</h2>
-    <p>Check out some of our playlists. </p><br>
-    <div class="w3-third w3-margin-bottom">
-      <ul class="w3-ul w3-border w3-hover-shadow">
-        <li class="w3-theme">
-          <p class="w3-xlarge">Basic</p>
-        </li>
-        <p> hello nvwoenv;obwvngao'vwuenv'ohawivnb'owaiehnoiwe voaiehosbvoawhgoiwbvo;invpiwehob</p>
-        <li class="w3-padding-16">
-          <li class="w3-padding-16"><b>25GB</b> Storage</li>
-          <li class="w3-padding-16"><b>25</b> Emails</li>
-          <li class="w3-padding-16"><b>25</b> Domains</li>
-          <li class="w3-padding-16"><b>Endless</b> Support</li>
-        </li>
-        <li class="w3-theme-l5 w3-padding-24">
-          <button class="w3-button w3-teal w3-padding-large"><i class="fa fa-check"></i> Actual Playlisssst</button>
-        </li>
-      </ul>
-    </div>
-
-    <div class="w3-third w3-margin-bottom">
-      <ul class="w3-ul w3-border w3-hover-shadow">
-        <li class="w3-theme-l2">
-          <p class="w3-xlarge">Pro</p>
-        </li>
-        <li class="w3-padding-16"><b>25GB</b> Storage</li>
-        <li class="w3-padding-16"><b>25</b> Emails</li>
-        <li class="w3-padding-16"><b>25</b> Domains</li>
-        <li class="w3-padding-16"><b>Endless</b> Support</li>
-        <li class="w3-padding-16">
-          <h2 class="w3-wide"><i class="fa fa-usd"></i> 25</h2>
-          <span class="w3-opacity">per month</span>
-        </li>
-        <li class="w3-theme-l5 w3-padding-24">
-          <button class="w3-button w3-teal w3-padding-large"><i class="fa fa-check"></i> Sign Up</button>
-        </li>
-      </ul>
-    </div>
-
-    <div class="w3-third w3-margin-bottom">
-      <ul class="w3-ul w3-border w3-hover-shadow">
-        <li class="w3-theme">
-          <p class="w3-xlarge">Premium</p>
-        </li>
-        <li class="w3-padding-16"><b>50GB</b> Storage</li>
-        <li class="w3-padding-16"><b>50</b> Emails</li>
-        <li class="w3-padding-16"><b>50</b> Domains</li>
-        <li class="w3-padding-16"><b>Endless</b> Support</li>
-        <li class="w3-padding-16">
-          <h2 class="w3-wide"><i class="fa fa-usd"></i> 50</h2>
-          <span class="w3-opacity">per month</span>
-        </li>
-        <li class="w3-theme-l5 w3-padding-24">
-          <button class="w3-button w3-teal w3-padding-large"><i class="fa fa-check"></i> Sign Up</button>
-        </li>
-      </ul>
-    </div>
-</div>
-
-<div class="w3-third w3-margin-bottom">
-  <ul class="w3-ul w3-border w3-hover-shadow">
-    <li class="w3-theme">
-      <p class="w3-xlarge">Premium</p>
-    </li>
-    <li class="w3-padding-16"><b>50GB</b> Storage</li>
-    <li class="w3-padding-16"><b>50</b> Emails</li>
-    <li class="w3-padding-16"><b>50</b> Domains</li>
-    <li class="w3-padding-16"><b>Endless</b> Support</li>
-    <li class="w3-padding-16">
-      <h2 class="w3-wide"><i class="fa fa-usd"></i> 50</h2>
-      <span class="w3-opacity">per month</span>
-    </li>
-    <li class="w3-theme-l5 w3-padding-24">
-      <button class="w3-button w3-teal w3-padding-large"><i class="fa fa-check"></i> Sign Up</button>
-    </li>
-  </ul>
-</div>
-</div>
-
 <!-- Contact Container -->
 <div class="w3-container w3-padding-64 w3-theme-l5" id="contact">
   <div class="w3-row">
     <div class="w3-col m5">
     <div class="w3-padding-16"><span class="w3-xlarge w3-border-teal w3-bottombar">Contact Us</span></div>
-      <h3>Address</h3>
       <p>Swing by for a cup of coffee, or whatever.</p>
-      <p><i class="fa fa-map-marker w3-text-teal w3-xlarge"></i>  Chicago, US</p>
-      <p><i class="fa fa-phone w3-text-teal w3-xlarge"></i>  +00 1515151515</p>
-      <p><i class="fa fa-envelope-o w3-text-teal w3-xlarge"></i>  test@test.com</p>
+      <p><i class="fa fa-map-marker w3-text-teal w3-xlarge"></i>  CSUMB </p>
+
     </div>
     <div class="w3-col m7">
       <form class="w3-container w3-card-4 w3-padding-16 w3-white" action="/action_page.php" target="_blank">
@@ -284,18 +289,16 @@
   </div>
 </div>
 
-<!-- Image of location/map -->
-<img src="/w3images/map.jpg" class="w3-image w3-greyscale-min" style="width:100%;">
 
 <!-- Footer -->
 <footer class="w3-container w3-padding-32 w3-theme-d1 w3-center">
-  <h4>Follow Us</h4>
+  <h4>Follow Us</h4> <!-- POSSIBLE NAMES discover, Music platforms  -->
   <a class="w3-button w3-large w3-teal" href="javascript:void(0)" title="Facebook"><i class="fa fa-facebook"></i></a>
   <a class="w3-button w3-large w3-teal" href="javascript:void(0)" title="Twitter"><i class="fa fa-twitter"></i></a>
   <a class="w3-button w3-large w3-teal" href="javascript:void(0)" title="Google +"><i class="fa fa-google-plus"></i></a>
   <a class="w3-button w3-large w3-teal" href="javascript:void(0)" title="Google +"><i class="fa fa-instagram"></i></a>
   <a class="w3-button w3-large w3-teal w3-hide-small" href="javascript:void(0)" title="Linkedin"><i class="fa fa-linkedin"></i></a>
-  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
+
 
   <div style="position:relative;bottom:100px;z-index:1;" class="w3-tooltip w3-right">
     <span class="w3-text w3-padding w3-teal w3-hide-small">Go To Top</span>
