lastest updates-Ish

--- a/Midterm/index.html
+++ b/Midterm/index.html
@@ -86,7 +86,7 @@
 
 <!-- Team Container -->
 <div class="w3-container w3-padding-32 w3-center" id="team">
-<h2>OUR TEAM</h2>
+<h2><b>OUR   TEAM</b></h2>
 <p>Meet the team - Our Music Junkies! </p>
 
 <div class="w3-row"><br>
@@ -104,8 +104,8 @@
 </div>
 
 <div class="w3-quarter">
-  <img src="/w3images/avatar.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
-  <h3>Ish Burton</h3>
+  <img src="" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
+  <h3>Ishmael Burton</h3>
   <p>Rap/Hip-Hop Junky!</p>
 </div>
 
@@ -120,7 +120,7 @@
 
 <!-- Pricing Row -->
 <div class="w3-row-padding w3-center" id="playlist">
-    <h2>P  L  A  Y  L  I  S  T</h2><br>
+    <h2><b>P  L  A  Y  L  I  S  T</b></h2><br><br>
     <div class="w3-quarter w3-margin-bottom">
       <ul class="w3-ul w3-border w3-hover-shadow">
         <li class="w3-theme">
@@ -132,7 +132,6 @@
         <li class="w3-padding-16"><audio src="mp3/.mp3" controls></audio><b>Domains</b></li>
         <li class="w3-padding-16"><img src="img/" width="" height=""><audio src="mp3/.mp3" controls></audio><b>Domains</b></li>
         <li class="w3-padding-16"><img src="img/" width="" height=""><audio src="mp3/.mp3" controls></audio><b>Endless</b></li>
-        <li class="w3-padding-16">
         </li>
         <li class="w3-theme-l5 w3-padding-24">
           <button class="w3-button w3-teal w3-padding-large"><i class="fa fa-check"></i> Link to Playlist</button>
@@ -151,7 +150,6 @@
         <li class="w3-padding-16"><audio src="mp3/.mp3" controls></audio><b>Domains</b></li>
         <li class="w3-padding-16"><img src="img/" width="" height=""><audio src="mp3/.mp3" controls></audio><b>Domains</b></li>
         <li class="w3-padding-16"><img src="img/" width="" height=""><audio src="mp3/.mp3" controls></audio><b>Endless</b></li>
-        <li class="w3-padding-16">
         </li>
         <li class="w3-theme-l5 w3-padding-24">
           <button class="w3-button w3-teal w3-padding-large"><i class="fa fa-check"></i> Link to Playlist</button>
@@ -165,12 +163,11 @@
           <p class="w3-xlarge">Rap/Hip-Hop</p>
         </li>
         <li class="w3-padding-16">  <iframe width="300" height="215"
-    src="https://www.youtube.com/embed/tgbNymZ7vqY">
+    src="https://www.youtube.com/embed/D2npm2gFddg">
     </iframe></li>
-        <li class="w3-padding-16"><audio src="mp3/.mp3" controls></audio><b>Domains</b></li>
-        <li class="w3-padding-16"><img src="img/" width="" height=""><audio src="mp3/.mp3" controls></audio><b>Domains</b></li>
-        <li class="w3-padding-16"><img src="img/" width="" height=""><audio src="mp3/.mp3" controls></audio><b>Endless</b></li>
-        <li class="w3-padding-16">
+        <li class="w3-padding-16"><img src="img/pluto.babypluto.png" width="135" height="135"><audio src="mp3/.mp3" controls></audio><b> Future & Lil Uzi Vert - Stripes Like Burberry</b></li>
+        <li class="w3-padding-16"><img src="img/slime.language2.png" width="135" height="135"><audio src="mp3/.mp3" controls></audio><b> Young Stoner Life, Young Thug, Gunna - Ski</b></li>
+        <li class="w3-padding-16"><img src="img/no.chill.png" width="135" height="135"><audio src="mp3/.mp3" controls></audio><b> Moneybagg Yo - No Chill (feat. Lil Baby & Rylo Rodriguez)</b></li>
         </li>
         <li class="w3-theme-l5 w3-padding-24">
           <button class="w3-button w3-teal w3-padding-large"><i class="fa fa-check"></i> Link to Playlist</button>
@@ -188,9 +185,8 @@
             src="https://www.youtube.com/embed/tgbNymZ7vqY">
           </iframe></li>
         <li class="w3-padding-16"><audio src="mp3/.mp3" controls></audio><b>Domains</b></li>
-        <li class="w3-padding-16"><img src="img/pic.jpg" width="120" height="120"><audio src="mp3/.mp3" controls></audio><b>Domains</b></li>
+        <li class="w3-padding-16"><img src="img/pic.jpg" width="135" height="135"><audio src="mp3/.mp3" controls></audio><b>Domains</b></li>
         <li class="w3-padding-16"><img src="img/" width="" height=""><audio src="mp3/.mp3" controls></audio><b>Endless</b></li>
-        <li class="w3-padding-16">
         </li>
         <li class="w3-theme-l5 w3-padding-24">
           <button class="w3-button w3-teal w3-padding-large"><i class="fa fa-check"></i> Link to Playlist</button>
@@ -233,12 +229,14 @@
 <div class="w3-quarter">
 <div class="w3-card w3-white">
   <div class="w3-container">
-  <h3>Customer 2</h3>
-  <h4>Trade</h4>
-  <p>Blablabla</p>
-  <p>Blablabla</p>
-  <p>Blablabla</p>
-  <p>Blablabla</p>
+  <h3>Rap/Hip-Hop</h3>
+  <h4>I don't know what I would do without todays modern Rap & Hip-Hop. This is by far my favorite genre of music to listen to.
+    Majority of the songs for this genre contain fast uptempo beats. Personally, I adore this genre more than any other becasue it fuels
+    myself with energy and confindence. Overall, Rap & Hip-Hop is enjoyable to listen to and it brings folks together in a positive way. -Ishmael Burton   </h4>
+  <p></p>
+  <p></p>
+  <p></p>
+  <p></p>
   </div>
   </div>
 </div>
