--- a/Midterm/index.html
+++ b/Midterm/index.html
@@ -86,7 +86,7 @@
 
 <!-- Team Container -->
 <div class="w3-container w3-padding-32 w3-center" id="team">
-<h2><b>OUR   TEAM</b></h2>
+<h2><b>O  U  R&emsp;T  E  A  M</b></h2>
 <p>Meet the team - Our Music Junkies! </p>
 
 <div class="w3-row"><br>
@@ -98,13 +98,13 @@
 </div>
 
 <div class="w3-quarter">
-  <img src="/w3images/avatar.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
+  <img src="img/bri.jpeg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
   <h3>Brianna Sanchez Ortega</h3>
   <p>Country Junky!</p>
 </div>
 
 <div class="w3-quarter">
-  <img src="" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
+  <img src="img/ishy.bio.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
   <h3>Ishmael Burton</h3>
   <p>Rap/Hip-Hop Junky!</p>
 </div>
@@ -145,11 +145,11 @@
           <p class="w3-xlarge">Country</p>
         </li>
         <li class="w3-padding-16">  <iframe width="300" height="215"
-    src="https://www.youtube.com/embed/tgbNymZ7vqY">
+    src="https://www.youtube.com/embed/ION_tTm_Eo8">
     </iframe></li>
-        <li class="w3-padding-16"><audio src="mp3/.mp3" controls></audio><b>Domains</b></li>
-        <li class="w3-padding-16"><img src="img/" width="" height=""><audio src="mp3/.mp3" controls></audio><b>Domains</b></li>
-        <li class="w3-padding-16"><img src="img/" width="" height=""><audio src="mp3/.mp3" controls></audio><b>Endless</b></li>
+        <li class="w3-padding-16"><img src="img/lukec.jpg" width="135" height="135"><audio src="mp3/.mp3" controls></audio><b>Luke Combs - Hurricane</b></li>
+        <li class="w3-padding-16"><img src="img/kaceym.png" width="135" height="135"><audio src="mp3/.mp3" controls></audio><b>Kacey Musgraves - Space Cowboy</b></li>
+        <li class="w3-padding-16"><img src="img/jason.jpg" width="135" height="135"><br><b>Jason Aldean - Show You Off</b><audio src="mp3/.mp3" controls></audio></li>
         </li>
         <li class="w3-theme-l5 w3-padding-24">
           <button class="w3-button w3-teal w3-padding-large"><i class="fa fa-check"></i> Link to Playlist</button>
@@ -204,11 +204,7 @@
   <div class="w3-card w3-white">
     <div class="w3-container">
     <h3>Rock/Alternative</h3>
-    <h4>tell me why you like music</h4>
-    <p>Blablabla</p>
-    <p>Blablabla</p>
-    <p>Blablabla</p>
-    <p>Blablabla</p>
+    <p>tell me why you like music</p>
     </div>
     </div>
 </div>
@@ -216,12 +212,11 @@
 <div class="w3-quarter">
 <div class="w3-card w3-white">
   <div class="w3-container">
-  <h3>Customer 1</h3>
-  <h4>Trade</h4>
-  <p>Blablabla</p>
-  <p>Blablabla</p>
-  <p>Blablabla</p>
-  <p>Blablabla</p>
+  <h3>Country</h3>
+  <p>I recently started listening to Country music more. This is a genre of music that mixes with other genres which is interesting.
+    A country song could get the feel of a pop song which is a great crossover. I find myself leaning towards country when doing homework
+     or getting ready. Overall, Country music isn't only for cowboys/girls.#yeehaw #howdyYall   - Brianna Sanchez O.</p>
+
   </div>
   </div>
 </div>
@@ -230,13 +225,9 @@
 <div class="w3-card w3-white">
   <div class="w3-container">
   <h3>Rap/Hip-Hop</h3>
-  <h4>I don't know what I would do without todays modern Rap & Hip-Hop. This is by far my favorite genre of music to listen to.
-    Majority of the songs for this genre contain fast uptempo beats. Personally, I adore this genre more than any other becasue it fuels
-    myself with energy and confindence. Overall, Rap & Hip-Hop is enjoyable to listen to and it brings folks together in a positive way. -Ishmael Burton   </h4>
-  <p></p>
-  <p></p>
-  <p></p>
-  <p></p>
+  <p>I don't know what I would do without todays modern Rap & Hip-Hop. This is by far my favorite genre of music to listen to.
+    Majority of the songs for this genre contain fast uptempo beats. Personally, I adore this genre more than any other because it fuels
+    myself with energy and confidence. Overall, Rap & Hip-Hop is enjoyable to listen to and it brings folks together in a positive way. -Ishmael Burton   </p>
   </div>
   </div>
 </div>
@@ -246,10 +237,6 @@
   <div class="w3-container">
   <h3>Customer 3</h3>
   <h4>Trade</h4>
-  <p>Blablabla</p>
-  <p>Blablabla</p>
-  <p>Blablabla</p>
-  <p>Blablabla</p>
   </div>
   </div>
 </div>
