--- a/Midterm/index.html
+++ b/Midterm/index.html
@@ -126,9 +126,11 @@
         <li class="w3-theme">
           <p class="w3-xlarge">Rock/Alternative</p>
         </li>
-        <li class="w3-padding-16">  <iframe width="300" height="215"
-    src="https://www.youtube.com/watch?v=anjGYjgIml4">
-    </iframe></li>
+        <li class="w3-padding-16"><video width="300" height="215" controls>
+          <source src="video/everlong.mp4" type="video/mp4">
+            <source src="movie.ogg" type="video/ogg">
+              Your browser does not support the video tag.
+            </video></li>
         <li class="w3-padding-16"><audio src="mp3/.mp3" controls></audio><b>Domains</b></li>
         <li class="w3-padding-16"><img src="img/" width="" height=""><audio src="mp3/.mp3" controls></audio><b>Domains</b></li>
         <li class="w3-padding-16"><img src="img/" width="" height=""><audio src="mp3/.mp3" controls></audio><b>Endless</b></li>
