--- a/Midterm/index.html
+++ b/Midterm/index.html
@@ -131,9 +131,9 @@
             <source src="movie.ogg" type="video/ogg">
               Your browser does not support the video tag.
             </video></li>
-        <li class="w3-padding-16"><audio src="mp3/.mp3" controls></audio><b>Domains</b></li>
-        <li class="w3-padding-16"><img src="img/" width="" height=""><audio src="mp3/.mp3" controls></audio><b>Domains</b></li>
-        <li class="w3-padding-16"><img src="img/" width="" height=""><audio src="mp3/.mp3" controls></audio><b>Endless</b></li>
+        <li class="w3-padding-16"><img src="img/black.jpg"width="135" height="135"><audio src="mp3/rock/parade.mp3" controls></audio><b> My Chemical Romance - Welcome To The Black Prade</b></li>
+        <li class="w3-padding-16"><img src="img/home.jpg" width="135" height="135"><audio src="mp3/rock/down.mp3" controls></audio><b> A Day To Remember - The Downfall Of Us All</b></li>
+        <li class="w3-padding-16"><img src="img/hot.png" width="135" height="135"><audio src="mp3/rock/smile.mp3" controls></audio><b> The Killers - Smile Like You Mean It</b></li>
         </li>
         <li class="w3-theme-l5 w3-padding-24">
           <button class="w3-button w3-teal w3-padding-large"><i class="fa fa-check"></i> Link to Playlist</button>
@@ -187,7 +187,7 @@
             src="https://www.youtube.com/embed/tgbNymZ7vqY">
           </iframe></li>
         <li class="w3-padding-16"><audio src="mp3/.mp3" controls></audio><b>Domains</b></li>
-        <li class="w3-padding-16"><img src="img/pic.jpg" width="135" height="135"><audio src="mp3/.mp3" controls></audio><b>Domains</b></li>
+        <li class="w3-padding-16"><img src="img/" width="" height=""><audio src="mp3/.mp3" controls></audio><b>Domains</b></li>
         <li class="w3-padding-16"><img src="img/" width="" height=""><audio src="mp3/.mp3" controls></audio><b>Endless</b></li>
         </li>
         <li class="w3-theme-l5 w3-padding-24">
