--- a/Midterm/index.html
+++ b/Midterm/index.html
@@ -146,12 +146,14 @@
         <li class="w3-theme">
           <p class="w3-xlarge">Country</p>
         </li>
-        <li class="w3-padding-16">  <iframe width="300" height="215"
-    src="https://www.youtube.com/embed/ION_tTm_Eo8">
-    </iframe></li>
-        <li class="w3-padding-16"><img src="img/lukec.jpg" width="135" height="135"><audio src="mp3/.mp3" controls></audio><b> Luke Combs - Hurricane</b></li>
-        <li class="w3-padding-16"><img src="img/kaceym.png" width="135" height="135"><audio src="mp3/.mp3" controls></audio><b> Kacey Musgraves - Space Cowboy</b></li>
-        <li class="w3-padding-16"><img src="img/jason.jpg" width="135" height="135"><br><b>J ason Aldean - Show You Off</b><audio src="mp3/.mp3" controls></audio></li>
+        <li class="w3-padding-16"><video width="300" height="215" controls>
+          <source src="video/bitches.mp4" type="video/mp4">
+            <source src="movie.ogg" type="video/ogg">
+              Your browser does not support the video tag.
+            </video>  </li>
+        <li class="w3-padding-16"><img src="img/lukec.jpg" width="135" height="135"><audio src="mp3/country/luke.mp3" controls></audio><b> Luke Combs - Hurricane</b></li>
+        <li class="w3-padding-16"><img src="img/kaceym.png" width="135" height="135"><audio src="mp3/country/space.mp3" controls></audio><b> Kacey Musgraves - Space Cowboy</b></li>
+        <li class="w3-padding-16"><img src="img/jason.jpg" width="135" height="135"><br><b>J ason Aldean - Show You Off</b><audio src="mp3/country/jason.mp3" controls></audio></li>
         </li>
         <li class="w3-theme-l5 w3-padding-24">
           <button class="w3-button w3-teal w3-padding-large"><i class="fa fa-check"></i> Link to Playlist</button>
@@ -164,12 +166,14 @@
         <li class="w3-theme">
           <p class="w3-xlarge">Rap/Hip-Hop</p>
         </li>
-        <li class="w3-padding-16">  <iframe width="300" height="215"
-    src="https://www.youtube.com/embed/D2npm2gFddg">
-    </iframe></li>
-        <li class="w3-padding-16"><img src="img/pluto.babypluto.png" width="135" height="135"><audio src="mp3/.mp3" controls></audio><b> Future & Lil Uzi Vert - Stripes Like Burberry</b></li>
-        <li class="w3-padding-16"><img src="img/slime.language2.png" width="135" height="135"><audio src="mp3/.mp3" controls></audio><b> Young Stoner Life, Young Thug, Gunna - Ski</b></li>
-        <li class="w3-padding-16"><img src="img/no.chill.png" width="135" height="135"><audio src="mp3/.mp3" controls></audio><b> Moneybagg Yo - No Chill (feat. Lil Baby & Rylo Rodriguez)</b></li>
+        <li class="w3-padding-16"><video width="300" height="215" controls>
+          <source src="video/love.mp4" type="video/mp4">
+            <source src="movie.ogg" type="video/ogg">
+              Your browser does not support the video tag.
+            </video> </li>
+        <li class="w3-padding-16"><img src="img/pluto.babypluto.png" width="135" height="135"><audio src="mp3/rap/uzi.mp3" controls></audio><b> Future & Lil Uzi Vert - Stripes Like Burberry</b></li>
+        <li class="w3-padding-16"><img src="img/slime.language2.png" width="135" height="135"><audio src="mp3/rap/ski.mp3" controls></audio><b> Young Stoner Life, Young Thug, Gunna - Ski</b></li>
+        <li class="w3-padding-16"><img src="img/no.chill.png" width="135" height="135"><audio src="mp3/rap/baby.mp3" controls></audio><b> Moneybagg Yo - No Chill (feat. Lil Baby & Rylo Rodriguez)</b></li>
         </li>
         <li class="w3-theme-l5 w3-padding-24">
           <button class="w3-button w3-teal w3-padding-large"><i class="fa fa-check"></i> Link to Playlist</button>
