--- a/Midterm/index.html
+++ b/Midterm/index.html
@@ -132,8 +132,8 @@
               Your browser does not support the video tag.
             </video></li>
         <li class="w3-padding-16"><img src="img/black.jpg"width="135" height="135"><audio src="mp3/rock/parade.mp3" controls></audio><b> My Chemical Romance - Welcome To The Black Prade</b></li>
-        <li class="w3-padding-16"><img src="img/home.jpg" width="135" height="135"><audio src="mp3/rock/down.mp3" controls></audio><b> A Day To Remember - The Downfall Of Us All</b></li>
-        <li class="w3-padding-16"><img src="img/hot.png" width="135" height="135"><audio src="mp3/rock/smile.mp3" controls></audio><b> The Killers - Smile Like You Mean It</b></li>
+        <li class="w3-padding-16"><img src="img/home.jpg" width="135" height="135"><audio src="mp3/rock/down.mp3" controls></audio><b><br> A Day To Remember - The Downfall Of Us All</b></li>
+        <li class="w3-padding-16"><img src="img/hot.png" width="135" height="135"><audio src="mp3/rock/smile.mp3" controls></audio><b> The Killers - Smile Like You Mean It<br><br></b></li>
         </li>
         <li class="w3-theme-l5 w3-padding-24">
           <button class="w3-button w3-teal w3-padding-large"><i class="fa fa-check"></i> Link to Playlist</button>
@@ -151,9 +151,9 @@
             <source src="movie.ogg" type="video/ogg">
               Your browser does not support the video tag.
             </video>  </li>
-        <li class="w3-padding-16"><img src="img/lukec.jpg" width="135" height="135"><audio src="mp3/country/luke.mp3" controls></audio><b> Luke Combs - Hurricane</b></li>
-        <li class="w3-padding-16"><img src="img/kaceym.png" width="135" height="135"><audio src="mp3/country/space.mp3" controls></audio><b> Kacey Musgraves - Space Cowboy</b></li>
-        <li class="w3-padding-16"><img src="img/jason.jpg" width="135" height="135"><br><b>J ason Aldean - Show You Off</b><audio src="mp3/country/jason.mp3" controls></audio></li>
+        <li class="w3-padding-16"><img src="img/lukec.jpg" width="135" height="135"><audio src="mp3/country/luke.mp3" controls></audio><b> Luke Combs - Hurricane<br><br></b></li>
+        <li class="w3-padding-16"><img src="img/kaceym.png" width="135" height="135"><audio src="mp3/country/space.mp3" controls></audio><b> Kacey Musgraves - Space Cowboy<br><br></b></li>
+        <li class="w3-padding-16"><img src="img/jason.jpg" width="135" height="135"><audio src="mp3/country/jason.mp3" controls></audio><br><b> J ason Aldean - Show You Off<br><br></b></li>
         </li>
         <li class="w3-theme-l5 w3-padding-24">
           <button class="w3-button w3-teal w3-padding-large"><i class="fa fa-check"></i> Link to Playlist</button>
