--- a/Midterm/index.html
+++ b/Midterm/index.html
@@ -104,7 +104,7 @@
 </div>
 
 <div class="w3-quarter">
-  <img src="img/ishy.bio.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
+  <img src="img/ishy.b.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
   <h3>Ishmael Burton</h3>
   <p>Rap/Hip-Hop Junky!</p>
 </div>
