--- a/Midterm/index.html
+++ b/Midterm/index.html
@@ -210,7 +210,8 @@
   <div class="w3-card w3-white">
     <div class="w3-container">
     <h3>Rock/Alternative</h3>
-    <p>tell me why you like music</p>
+    <h3> Rock Music is Timeless </p> 
+    <p>They say good music never gets old, and when it comes to rock and metal, that’s proven to be true. Music is art and beautiful art can never be outdated. There are rock songs from The Beatles, Rolling Stones, and AC/DC that will never go out of style and that are still being played heavily today. It’s just something about the way that rock music makes you feel and think. People prefer to listen to classic rock music with real meaning than to listen to the regurgitated lyrics of today’s songs with no real significance. This is why listening to rock songs, whether old or new, never goes out of style</p>
     </div>
     </div>
 </div>
@@ -254,7 +255,7 @@
   <div class="w3-row">
     <div class="w3-col m5">
     <div class="w3-padding-16"><span class="w3-xlarge w3-border-teal w3-bottombar">Contact Us</span></div>
-      <p>Swing by for a cup of coffee, or whatever.</p>
+      <p> Swing by for a cup of coffee and listen to some of our jams! </p>
       <p><i class="fa fa-map-marker w3-text-teal w3-xlarge"></i>  CSUMB </p>
 
     </div>
