--- a/Midterm/index.html
+++ b/Midterm/index.html
@@ -90,7 +90,6 @@
 <p>Meet the team - Our Music Junkies! </p>
 
 <div class="w3-row"><br>
-
 <div class="w3-quarter">
   <img src="img/pic.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
   <h3>Mauricio Vega</h3>
@@ -114,7 +113,6 @@
   <h3>Jeremy Jacob Fransisco</h3>
   <p>Jazzmaster Junky!</p>
 </div>
-
 </div>
 </div>
 
@@ -253,7 +251,7 @@
 <div class="w3-container w3-padding-64 w3-theme-l5" id="contact">
   <div class="w3-row">
     <div class="w3-col m5">
-    <div class="w3-padding-16"><span class="w3-xlarge w3-border-teal w3-bottombar">Contact Us</span></div>
+    <div class="w3-padding-16"><span class="w3-xlarge w3-border-teal w3-bottombar"><b>C O N T A C T&emsp;U  S</b></span></div>
       <p>Swing by for a cup of coffee, or whatever.</p>
       <p><i class="fa fa-map-marker w3-text-teal w3-xlarge"></i>  CSUMB </p>
 
