--- a/Midterm/index.html
+++ b/Midterm/index.html
@@ -210,8 +210,12 @@
   <div class="w3-card w3-white">
     <div class="w3-container">
     <h3>Rock/Alternative</h3>
-    <h3> Rock Music is Timeless </p> 
-    <p>They say good music never gets old, and when it comes to rock and metal, that’s proven to be true. Music is art and beautiful art can never be outdated. There are rock songs from The Beatles, Rolling Stones, and AC/DC that will never go out of style and that are still being played heavily today. It’s just something about the way that rock music makes you feel and think. People prefer to listen to classic rock music with real meaning than to listen to the regurgitated lyrics of today’s songs with no real significance. This is why listening to rock songs, whether old or new, never goes out of style</p>
+    <h3> Rock Music is Timeless </h3> 
+    <p>They say good music never gets old, and when it comes to rock and metal, that’s proven to be true.
+      Music is art and beautiful art can never be outdated. There are rock songs from The Beatles, Rolling Stones, and AC/DC that will never go out of style and that are still being played heavily today.
+      It’s just something about the way that rock music makes you feel and think.
+      People prefer to listen to classic rock music with real meaning than to listen to the regurgitated lyrics of today’s songs with no real significance.
+      This is why listening to rock songs, whether old or new, never goes out of style</p>
     </div>
     </div>
 </div>
