--- a/Midterm/index.html
+++ b/Midterm/index.html
@@ -5,6 +5,7 @@
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/amplitudejs@{{v5.3.1}}/dist/amplitude.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type ="text/css" href="css/lab.css">
+<script src="js/lab.js" defer></script>
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-black.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -82,6 +83,12 @@
 <div class="w3-container" style="position:relative">
   <a onclick="w3_open()" class="w3-button w3-xlarge w3-circle w3-teal"
   style="position:absolute;top:-28px;right:24px">+</a>
+</div>
+
+<div id="output">
+  Enter FULL name for placement:
+   <input type="text" id="input">
+   <button id="button">ENTER</button>
 </div>
 
 <!-- Team Container -->
@@ -210,7 +217,7 @@
   <div class="w3-card w3-white">
     <div class="w3-container">
     <h3>Rock/Alternative</h3>
-    <h3> Rock Music is Timeless </h3> 
+    <h3> Rock Music is Timeless </h3>
     <p>They say good music never gets old, and when it comes to rock and metal, that’s proven to be true.
       Music is art and beautiful art can never be outdated. There are rock songs from The Beatles, Rolling Stones, and AC/DC that will never go out of style and that are still being played heavily today.
       It’s just something about the way that rock music makes you feel and think.
