--- a/Midterm/index.html
+++ b/Midterm/index.html
@@ -191,8 +191,9 @@
             src="https://www.youtube.com/embed/tgbNymZ7vqY">
           </iframe></li>
         <li class="w3-padding-16"><audio src="mp3/.mp3" controls></audio><b>Domains</b></li>
-        <li class="w3-padding-16"><img src="img/" width="" height=""><audio src="mp3/.mp3" controls></audio><b>Domains</b></li>
+        <li class="w3-padding-16"><img src="img/" width="" height=""><audio src="mp3/.mp3" controls></audio><b></b></li>
         <li class="w3-padding-16"><img src="img/" width="" height=""><audio src="mp3/.mp3" controls></audio><b>Endless</b></li>
+        <li class="w3-padding-16"><img src="img/" width="" height=""><audio src="mp3/.mp3" controls></audio><b>
         </li>
         <li class="w3-theme-l5 w3-padding-24">
           <button class="w3-button w3-teal w3-padding-large"><i class="fa fa-check"></i> Link to Playlist</button>
@@ -210,7 +211,7 @@
   <div class="w3-card w3-white">
     <div class="w3-container">
     <h3>Rock/Alternative</h3>
-    <h3> Rock Music is Timeless </h3> 
+    <h3> Rock Music is Timeless </h3>
     <p>They say good music never gets old, and when it comes to rock and metal, that’s proven to be true.
       Music is art and beautiful art can never be outdated. There are rock songs from The Beatles, Rolling Stones, and AC/DC that will never go out of style and that are still being played heavily today.
       It’s just something about the way that rock music makes you feel and think.
@@ -246,8 +247,11 @@
 <div class="w3-quarter">
 <div class="w3-card w3-white">
   <div class="w3-container">
-  <h3>Customer 3</h3>
-  <h4>Trade</h4>
+  <h3>Jazz</h3>
+  <p>Jazz. It's not just coffee shop music that you listen to when you want to be cool, seductive and mysterious. It's music that attempts to get you feeling things through the actual sound of
+    the instruments being played, rather than the lyrics. Most of the time, at least. It's music that's hard to define as being slow or relaxing because as soon as you say that, someone can pull up
+    a track that goes as fast as the musicians can go. Jazz can be universally appreciated thanks to its focus on instruments, and even if there were lyrics of a different language, you can't
+    help but hum or sway to the melody. Jazz music is fantastic music to listen to at any time, and hopefully more of you folks can get to experience it. - Jeremy Jacob Francisco</p>
   </div>
   </div>
 </div>
