--- a/Midterm/index.html
+++ b/Midterm/index.html
@@ -86,9 +86,9 @@
 </div>
 
 <div id="output">
-  Enter FULL name for placement:
+  <h3><b>ENTER FULL NAME FOR PLACEMENT:<b></h3>
    <input type="text" id="input">
-   <button id="button">ENTER</button>
+   <button id="button" class="w3-button w3-theme">ENTER</button>
 </div>
 
 <!-- Team Container -->
@@ -99,7 +99,7 @@
 <div class="w3-row"><br>
 
 <div class="w3-quarter">
-  <img src="img/pic.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
+  <img src="img/pic.jpg" alt="Boss" width="150" height="210" class="w3-circle w3-hover-opacity">
   <h3>Mauricio Vega</h3>
   <p>Rock/Alternative Junky!</p>
 </div>
