--- a/Midterm/index.html
+++ b/Midterm/index.html
@@ -160,7 +160,7 @@
             </video>  </li>
         <li class="w3-padding-16"><img src="img/lukec.jpg" width="135" height="135"><audio src="mp3/country/luke.mp3" controls></audio><b> Luke Combs - Hurricane<br><br></b></li>
         <li class="w3-padding-16"><img src="img/kaceym.png" width="135" height="135"><audio src="mp3/country/space.mp3" controls></audio><b> Kacey Musgraves - Space Cowboy<br><br></b></li>
-        <li class="w3-padding-16"><img src="img/jason.jpg" width="135" height="135"><audio src="mp3/country/jason.mp3" controls></audio><br><b> J ason Aldean - Show You Off<br><br></b></li>
+        <li class="w3-padding-16"><img src="img/jason.jpg" width="135" height="135"><audio src="mp3/country/jason.mp3" controls></audio><br><b> Jason Aldean - Show You Off<br><br></b></li>
         </li>
         <li class="w3-theme-l5 w3-padding-24">
           <button class="w3-button w3-teal w3-padding-large"><i class="fa fa-check"></i> Link to Playlist</button>
@@ -198,9 +198,9 @@
               <source src="movie.ogg" type="video/ogg">
                 Your browser does not support the video tag.
               </video> </li>
-        <li class="w3-padding-16"><img src="img/"width="" height=""><audio src="mp3/.mp3" controls></audio><b>Domains</b></li>
-        <li class="w3-padding-16"><img src="img/" width="" height=""><audio src="mp3/.mp3" controls></audio><b>Domains</b></li>
-        <li class="w3-padding-16"><img src="img/" width="" height=""><audio src="mp3/.mp3" controls></audio><b>Endless</b></li>
+        <li class="w3-padding-16"><img src="img/stan.jpg"width="135" height="135"><audio src="mp3/jazz/.mp3" controls></audio><b><br> Stan Getz & João Gilberto & Astrud Gilberto - The Girl from Ipanema (The Girl From Ipanema - The Bossa Nova Years)<br><br></b></li>
+        <li class="w3-padding-16"><img src="img/wes.jpg" width="135" height="135"><audio src="mp3/jazz/.mp3" controls></audio><b><br> Wes Montgomery - Polka Dots and Moonbeams (Incredible Jazz Guitar)<br><br></b></li>
+        <li class="w3-padding-16"><img src="img/red.jpg" width="135" height="135"><audio src="mp3/jazz/.mp3" controls></audio><b><br> Roy Ayers Ubiquity - Lifeline (Lifeline)<br><br></b></li>
         </li>
         <li class="w3-theme-l5 w3-padding-24">
           <button class="w3-button w3-teal w3-padding-large"><i class="fa fa-check"></i> Link to Playlist</button>
