--- a/Midterm/index.html
+++ b/Midterm/index.html
@@ -86,9 +86,9 @@
 </div>
 
 <div id="output">
-  Enter FULL name for placement:
+  <h3> E N T E R&emsp;F U L L&emsp;N A M E&emsp;F O R&emsp;P L A C E M E N T:</h3>
    <input type="text" id="input">
-   <button id="button">ENTER</button>
+   <button id="button" class="w3-button w3-theme">ENTER</button>
 </div>
 
 <!-- Team Container -->
@@ -99,7 +99,7 @@
 <div class="w3-row"><br>
 
 <div class="w3-quarter">
-  <img src="img/pic.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
+  <img src="img/pic.jpg" alt="Boss" width="150" height="210" class="w3-circle w3-hover-opacity">
   <h3>Mauricio Vega</h3>
   <p>Rock/Alternative Junky!</p>
 </div>
@@ -117,7 +117,7 @@
 </div>
 
 <div class="w3-quarter">
-  <img src="img/jerem.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
+  <img src="img/jeremy.jpg" alt="Boss" width="150" height="210" class="w3-circle w3-hover-opacity">
   <h3>Jeremy Jacob Fransisco</h3>
   <p>Jazzmaster Junky!</p>
 </div>
@@ -193,30 +193,16 @@
         <li class="w3-theme">
           <p class="w3-xlarge">Jazz</p>
         </li>
-<<<<<<< Updated upstream
-=======
+
         <li class="w3-padding-16">
-          <iframe width="300" height="215"
-            src="https://www.youtube.com/embed/tgbNymZ7vqY">
-          </iframe></li>
-        <li class="w3-padding-16"><audio src="mp3/.mp3" controls></audio><b>Domains</b></li>
-        <li class="w3-padding-16"><img src="img/" width="" height=""><audio src="mp3/.mp3" controls></audio><b></b></li>
->>>>>>> Stashed changes
         <li class="w3-padding-16"><video width="300" height="215" controls>
             <source src="video/.mp4" type="video/mp4">
               <source src="movie.ogg" type="video/ogg">
                 Your browser does not support the video tag.
               </video> </li>
-<<<<<<< Updated upstream
         <li class="w3-padding-16"><img src="img/stan.jpg"width="135" height="135"><audio src="mp3/jazz/.mp3" controls></audio><b><br> Stan Getz & João Gilberto & Astrud Gilberto - The Girl from Ipanema (The Girl From Ipanema - The Bossa Nova Years)<br><br></b></li>
         <li class="w3-padding-16"><img src="img/wes.jpg" width="135" height="135"><audio src="mp3/jazz/.mp3" controls></audio><b><br> Wes Montgomery - Polka Dots and Moonbeams (Incredible Jazz Guitar)<br><br></b></li>
         <li class="w3-padding-16"><img src="img/red.jpg" width="135" height="135"><audio src="mp3/jazz/.mp3" controls></audio><b><br> Roy Ayers Ubiquity - Lifeline (Lifeline)<br><br></b></li>
-=======
-        <li class="w3-padding-16"><img src="img/"width="" height=""><audio src="mp3/.mp3" controls></audio><b>Domains</b></li>
-        <li class="w3-padding-16"><img src="img/" width="" height=""><audio src="mp3/.mp3" controls></audio><b>Domains</b></li>
-        <li class="w3-padding-16"><img src="img/" width="" height=""><audio src="mp3/.mp3" controls></audio><b>Endless</b></li>
-        <li class="w3-padding-16"><img src="img/" width="" height=""><audio src="mp3/.mp3" controls></audio><b>
->>>>>>> Stashed changes
         </li>
         <li class="w3-theme-l5 w3-padding-24">
           <button class="w3-button w3-teal w3-padding-large"><i class="fa fa-check"></i> Link to Playlist</button>
@@ -270,9 +256,12 @@
 <div class="w3-quarter">
 <div class="w3-card w3-white">
   <div class="w3-container">
-  <h3>Customer 3</h3>
-  <h4>Trade</h4>
-  </div>
+    <h3>Jazz</h3>
+    <p>Jazz. It's not just coffee shop music that you listen to when you want to be cool, seductive and mysterious. It's music that attempts to get you feeling things through the actual sound of
+      the instruments being played, rather than the lyrics. Most of the time, at least. It's music that's hard to define as being slow or relaxing because as soon as you say that, someone can pull up
+      a track that goes as fast as the musicians can go. Jazz can be universally appreciated thanks to its focus on instruments, and even if there were lyrics of a different language, you can't
+      help but hum or sway to the melody. Jazz music is fantastic music to listen to at any time, and hopefully more of you folks can get to experience it. - Jeremy Jacob Francisco</p>
+    </div>
   </div>
 </div>
 
