--- a/Midterm/index.html
+++ b/Midterm/index.html
@@ -138,9 +138,9 @@
             <source src="movie.ogg" type="video/ogg">
               Your browser does not support the video tag.
             </video></li>
-        <li class="w3-padding-16"><img src="img/black.jpg"width="135" height="135"><audio src="mp3/rock/parade.mp3" controls></audio><b> My Chemical Romance - Welcome To The Black Prade</b></li>
+        <li class="w3-padding-16"><img src="img/black.jpg"width="135" height="135"><audio src="mp3/rock/parade.mp3" controls></audio><b><br> My Chemical Romance - Welcome To The Black Prade</b></li>
         <li class="w3-padding-16"><img src="img/home.jpg" width="135" height="135"><audio src="mp3/rock/down.mp3" controls></audio><b><br> A Day To Remember - The Downfall Of Us All</b></li>
-        <li class="w3-padding-16"><img src="img/hot.png" width="135" height="135"><audio src="mp3/rock/smile.mp3" controls></audio><b> The Killers - Smile Like You Mean It<br><br></b></li>
+        <li class="w3-padding-16"><img src="img/hot.png" width="135" height="135"><audio src="mp3/rock/smile.mp3" controls></audio><b><br> The Killers - Smile Like You Mean It<br><br></b></li>
         </li>
         <li class="w3-theme-l5 w3-padding-24">
           <button class="w3-button w3-teal w3-padding-large"><i class="fa fa-check"></i> Link to Playlist</button>
@@ -194,15 +194,14 @@
           <p class="w3-xlarge">Jazz</p>
         </li>
 
-        <li class="w3-padding-16">
         <li class="w3-padding-16"><video width="300" height="215" controls>
-            <source src="video/.mp4" type="video/mp4">
+            <source src="video/smooth.mp4" type="video/mp4">
               <source src="movie.ogg" type="video/ogg">
                 Your browser does not support the video tag.
               </video> </li>
-        <li class="w3-padding-16"><img src="img/stan.jpg"width="135" height="135"><audio src="mp3/jazz/.mp3" controls></audio><b><br> Stan Getz & João Gilberto & Astrud Gilberto - The Girl from Ipanema (The Girl From Ipanema - The Bossa Nova Years)<br><br></b></li>
-        <li class="w3-padding-16"><img src="img/wes.jpg" width="135" height="135"><audio src="mp3/jazz/.mp3" controls></audio><b><br> Wes Montgomery - Polka Dots and Moonbeams (Incredible Jazz Guitar)<br><br></b></li>
-        <li class="w3-padding-16"><img src="img/red.jpg" width="135" height="135"><audio src="mp3/jazz/.mp3" controls></audio><b><br> Roy Ayers Ubiquity - Lifeline (Lifeline)<br><br></b></li>
+        <li class="w3-padding-16"><img src="img/stan.jpg"width="135" height="135"><audio src="mp3/jazz/girl.mp3" controls></audio><b><br> Stan Getz & João Gilberto & Astrud Gilberto - The Girl from Ipanema (The Girl From Ipanema - The Bossa Nova Years)<br></b></li>
+        <li class="w3-padding-16"><img src="img/wes.jpg" width="135" height="135"><audio src="mp3/jazz/dots.mp3" controls></audio><b><br> Wes Montgomery - Polka Dots and Moonbeams (Incredible Jazz Guitar)<br></b></li>
+        <li class="w3-padding-16"><img src="img/red.jpg" width="135" height="135"><audio src="mp3/jazz/line.mp3" controls></audio><b><br> Roy Ayers Ubiquity - Lifeline (Lifeline)<br></b></li>
         </li>
         <li class="w3-theme-l5 w3-padding-24">
           <button class="w3-button w3-teal w3-padding-large"><i class="fa fa-check"></i> Link to Playlist</button>
