--- a/Midterm/index.html
+++ b/Midterm/index.html
@@ -199,9 +199,9 @@
               <source src="movie.ogg" type="video/ogg">
                 Your browser does not support the video tag.
               </video> </li>
-        <li class="w3-padding-16"><img src="img/stan.jpg"width="135" height="135"><audio src="mp3/jazz/girl.mp3" controls></audio><b><br> Stan Getz & João Gilberto & Astrud Gilberto - The Girl from Ipanema (The Girl From Ipanema - The Bossa Nova Years)<br></b></li>
-        <li class="w3-padding-16"><img src="img/wes.jpg" width="135" height="135"><audio src="mp3/jazz/dots.mp3" controls></audio><b><br> Wes Montgomery - Polka Dots and Moonbeams (Incredible Jazz Guitar)<br></b></li>
-        <li class="w3-padding-16"><img src="img/red.jpg" width="135" height="135"><audio src="mp3/jazz/line.mp3" controls></audio><b><br> Roy Ayers Ubiquity - Lifeline (Lifeline)<br></b></li>
+        <li class="w3-padding-16"><img src="img/stan.jpg"width="135" height="135"><audio src="mp3/jazz/girl.mp3" controls></audio><b><br> Stan Getz & João Gilberto & Astrud Gilberto - The Girl from Ipanema<br></b></li>
+        <li class="w3-padding-16"><img src="img/wes.jpg" width="135" height="135"><audio src="mp3/jazz/dots.mp3" controls></audio><b><br> Wes Montgomery - Polka Dots and Moonbeams<br></b></li>
+        <li class="w3-padding-16"><img src="img/red.jpg" width="135" height="135"><audio src="mp3/jazz/line.mp3" controls></audio><b><br> Roy Ayers Ubiquity - Lifeline<br></b></li>
         </li>
         <li class="w3-theme-l5 w3-padding-24">
           <button class="w3-button w3-teal w3-padding-large"><i class="fa fa-check"></i> Link to Playlist</button>
