--- a/Midterm/index.html
+++ b/Midterm/index.html
@@ -158,9 +158,9 @@
             <source src="movie.ogg" type="video/ogg">
               Your browser does not support the video tag.
             </video>  </li>
-        <li class="w3-padding-16"><img src="img/lukec.jpg" width="135" height="135"><audio src="mp3/country/luke.mp3" controls></audio><b> Luke Combs - Hurricane<br><br></b></li>
-        <li class="w3-padding-16"><img src="img/kaceym.png" width="135" height="135"><audio src="mp3/country/space.mp3" controls></audio><b> Kacey Musgraves - Space Cowboy<br><br></b></li>
-        <li class="w3-padding-16"><img src="img/jason.jpg" width="135" height="135"><audio src="mp3/country/jason.mp3" controls></audio><br><b> Jason Aldean - Show You Off<br><br></b></li>
+        <li class="w3-padding-16"><img src="img/lukec.jpg" width="135" height="135"><audio src="mp3/country/luke.mp3" controls></audio><b><br>Luke Combs - Hurricane<br><br></b></li>
+        <li class="w3-padding-16"><img src="img/kaceym.png" width="135" height="135"><audio src="mp3/country/space.mp3" controls></audio><b><br>Kacey Musgraves - Space Cowboy<br><br></b></li>
+        <li class="w3-padding-16"><img src="img/jason.jpg" width="135" height="135"><audio src="mp3/country/jason.mp3" controls></audio><br><b><br>Jason Aldean - Show You Off<br><br></b></li>
         </li>
         <li class="w3-theme-l5 w3-padding-24">
           <button class="w3-button w3-teal w3-padding-large"><i class="fa fa-check"></i> Link to Playlist</button>
@@ -178,12 +178,12 @@
             <source src="movie.ogg" type="video/ogg">
               Your browser does not support the video tag.
             </video> </li>
-        <li class="w3-padding-16"><img src="img/pluto.babypluto.png" width="135" height="135"><audio src="mp3/rap/uzi.mp3" controls></audio><b> Future & Lil Uzi Vert - Stripes Like Burberry</b></li>
-        <li class="w3-padding-16"><img src="img/slime.language2.png" width="135" height="135"><audio src="mp3/rap/ski.mp3" controls></audio><b> Young Stoner Life, Young Thug, Gunna - Ski</b></li>
-        <li class="w3-padding-16"><img src="img/no.chill.png" width="135" height="135"><audio src="mp3/rap/baby.mp3" controls></audio><b> Moneybagg Yo - No Chill (feat. Lil Baby & Rylo Rodriguez)</b></li>
+        <li class="w3-padding-16"><img src="img/pluto.babypluto.png" width="135" height="135"><audio src="mp3/rap/uzi.mp3" controls></audio><b><br>Future & Lil Uzi Vert - Stripes Like Burberry<br></b></li>
+        <li class="w3-padding-16"><img src="img/slime.language2.png" width="135" height="135"><audio src="mp3/rap/ski.mp3" controls></audio><b><br>Young Stoner Life, Young Thug, Gunna - Ski<br></b></li>
+        <li class="w3-padding-16"><img src="img/no.chill.png" width="135" height="135"><audio src="mp3/rap/baby.mp3" controls></audio><b><br>Moneybagg Yo - No Chill (feat. Lil Baby & Rylo Rodriguez)<br></b></li>
         </li>
         <li class="w3-theme-l5 w3-padding-24">
-          <button class="w3-button w3-teal w3-padding-large"><i class="fa fa-check"></i> Link to Playlist</button>
+          <button class="w3-button w3-teal w3-padding-large"><i class="fa fa-check"></i>Link to Playlist</button>
         </li>
       </ul>
     </div>
