--- a/Midterm/index.html
+++ b/Midterm/index.html
@@ -224,7 +224,7 @@
       Music is art and beautiful art can never be outdated. There are rock songs from The Beatles, Rolling Stones, and AC/DC that will never go out of style and that are still being played heavily today.
       It’s just something about the way that rock music makes you feel and think.
       People prefer to listen to classic rock music with real meaning than to listen to the regurgitated lyrics of today’s songs with no real significance.
-      This is why listening to rock songs, whether old or new, never goes out of style</p>
+      This is why listening to rock songs, whether old or new, never goes out of style - Mauricio Vega </p>
     </div>
     </div>
 </div>
