quick style fixes

--- a/Midterm/index.html
+++ b/Midterm/index.html
@@ -160,7 +160,7 @@
             </video>  </li>
         <li class="w3-padding-16"><img src="img/lukec.jpg" width="135" height="135"><audio src="mp3/country/luke.mp3" controls></audio><b><br>Luke Combs - Hurricane<br><br></b></li>
         <li class="w3-padding-16"><img src="img/kaceym.png" width="135" height="135"><audio src="mp3/country/space.mp3" controls></audio><b><br>Kacey Musgraves - Space Cowboy<br><br></b></li>
-        <li class="w3-padding-16"><img src="img/jason.jpg" width="135" height="135"><audio src="mp3/country/jason.mp3" controls></audio><br><b><br>Jason Aldean - Show You Off<br><br></b></li>
+        <li class="w3-padding-16"><img src="img/jason.jpg" width="135" height="135"><audio src="mp3/country/jason.mp3" controls></audio><br><b>Jason Aldean - Show You Off<br><br></b></li>
         </li>
         <li class="w3-theme-l5 w3-padding-24">
           <button class="w3-button w3-teal w3-padding-large"><i class="fa fa-check"></i> Link to Playlist</button>
@@ -201,7 +201,7 @@
               </video> </li>
         <li class="w3-padding-16"><img src="img/stan.jpg"width="135" height="135"><audio src="mp3/jazz/girl.mp3" controls></audio><b><br> Stan Getz & João Gilberto & Astrud Gilberto - The Girl from Ipanema<br></b></li>
         <li class="w3-padding-16"><img src="img/wes.jpg" width="135" height="135"><audio src="mp3/jazz/dots.mp3" controls></audio><b><br> Wes Montgomery - Polka Dots and Moonbeams<br></b></li>
-        <li class="w3-padding-16"><img src="img/red.jpg" width="135" height="135"><audio src="mp3/jazz/line.mp3" controls></audio><b><br> Roy Ayers Ubiquity - Lifeline<br></b></li>
+        <li class="w3-padding-16"><img src="img/red.jpg" width="135" height="135"><audio src="mp3/jazz/line.mp3" controls></audio><b><br> Roy Ayers Ubiquity - Lifeline<br><br></b></li>
         </li>
         <li class="w3-theme-l5 w3-padding-24">
           <button class="w3-button w3-teal w3-padding-large"><i class="fa fa-check"></i> Link to Playlist</button>
@@ -247,7 +247,7 @@
   <h3>Rap/Hip-Hop</h3>
   <p>I don't know what I would do without todays modern Rap & Hip-Hop. This is by far my favorite genre of music to listen to.
     Majority of the songs for this genre contain fast uptempo beats. Personally, I adore this genre more than any other because it fuels
-    myself with energy and confidence. Overall, Rap & Hip-Hop is enjoyable to listen to and it brings folks together in a positive way. -Ishmael Burton   </p>
+    myself with energy and confidence. Overall, Rap & Hip-Hop is enjoyable to listen to and it brings folks together in a positive way. - Ishmael Burton</p>
   </div>
   </div>
 </div>
